# intelligence-brief

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
scripts/: test_all_sources.py  test_fetch.py
src/intelligence_brief/: __init__.py  aggregator.py  analysis.py  brief_storage.py  config.py  doris_interface.py  email_sender.py  main.py  memory_integration.py  models.py  publisher.py
src/intelligence_brief/sources/: __init__.py  arxiv.py  github.py  hackernews.py  podcast.py  reddit.py  rss.py  substack.py
